release-data/changelogs/8.3/plugins/scale-out-relay.adoc
= Changelogs for Rudder plugin scale-out-relay 8.3.\* versions

== scale-out-relay-8.3.12-2.1 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.11-2.1 (2026-05-04)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Relay operations info logs have NodeId in them
    (https://issues.rudder.io/issues/28649[#28649])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.10-2.1 (2026-04-01)

=== Changes


==== Miscellaneous

* Start of promoting and demoting should be info level log
    (https://issues.rudder.io/issues/28475[#28475])

=== Bug fixes

==== Miscellaneous

* Fixed: Error log when rolling back a node should not be at debug level
    (https://issues.rudder.io/issues/28494[#28494])

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.9-2.1 (2026-02-16)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.8-2.1 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.7-2.1 (2025-12-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.6-2.1 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.5-2.1 (2025-10-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.4-2.1 (2025-09-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.3-2.1 (2025-07-17)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.2-2.1 (2025-06-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.1-2.1 (2025-05-07)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.0-2.1 (2025-04-23)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.0.rc1-2.1 (2025-04-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-8.3.0.alpha1-2.1 (2025-01-23)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 8.3 series and therefore all installations of 8.3.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

