release-data/changelogs/9.0/plugins/scale-out-relay.adoc
= Changelogs for Rudder plugin scale-out-relay 9.0.\* versions

== scale-out-relay-9.0.7-2.1 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.6-2.1 (2026-05-04)

=== Changes


==== Miscellaneous

* Relay-to-node operation succeeds even if some nodes still depend on relay
    (https://issues.rudder.io/issues/28657[#28657])

=== Bug fixes

==== Miscellaneous

* Fixed: Relay operations info logs have NodeId in them
    (https://issues.rudder.io/issues/28649[#28649])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.5-2.1 (2026-04-02)

=== Changes


==== Miscellaneous

* Start of promoting and demoting should be info level log
    (https://issues.rudder.io/issues/28475[#28475])

=== Bug fixes

==== Miscellaneous

* Fixed: Error log when rolling back a node should not be at debug level
    (https://issues.rudder.io/issues/28494[#28494])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.4-2.1 (2026-02-16)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.3-2.1 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.2-2.1 (2025-12-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.1-2.1 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0-2.1 (2025-10-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.rc2-2.1 (2025-10-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.rc1-2.1 (2025-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.beta2-2.1 (2025-10-07)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.beta1-2.1 (2025-09-09)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.alpha1-2.1 (2025-07-24)

=== Changes


==== Plugins management

* Update plugins parent pom to use scala 3
    (https://issues.rudder.io/issues/27032[#27032])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== scale-out-relay-9.0.0.alpha1-2.1 (2025-07-24)

=== Changes


==== Plugins management

* Update plugins parent pom to use scala 3
    (https://issues.rudder.io/issues/27032[#27032])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

